--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,9 @@ body{
     gap: 5px;
     padding: 5px;
     grid-template-columns: auto 200px;
-    grid-template-rows: 60px auto 15vh;
+    grid-template-rows: 60px 85vh 15vh;
     overflow-y: hidden;
+    background-color: #000;
 }
 
 /* -------------------- header ------------------ */
@@ -46,6 +47,7 @@ nav{
     display: flex;
     align-items: center;
     padding: 10px;
+    position: relative;
 }
 
 .logo{
@@ -61,11 +63,140 @@ nav{
 .nav-list span{
     color: var(--BrancoPadrao);
     font-family: var(--fontEspecial);
+    cursor: pointer;
+}
 
+.modalUser{
+    position: absolute;
+    width: 200px;
+    height: 120px;
+    top: 45px;
+    right: 2px;
+    margin-top: 10px;
+    background-color: rgb(245, 237, 237);
+    cursor:default;
+    padding: 10px;
+    display: none;
 
 }
 
+.modalUser a {
+    width: 100%;
+    height: 30px;
+    background-color: #004853;
+    text-decoration: none;
+    color: white;
+    display: block;
+    text-align: center;
+    padding: 5px;
 
+}
+
+.modalUser a:last-child{
+    margin-top: 20px;
+}
+
+@keyframes drop{
+    from{
+
+        transform: translateY(-50px);
+    }
+
+    to{
+        transform: translateY(0);
+    }
+}
+
+.activeModal{
+    display: block;
+    animation: drop .3s;
+}
+
+
+.modalEditUser{
+    display: none;
+    position: absolute;
+    width: 500px;
+    height: 400px;
+    background-color: rgb(245, 237, 237);
+    z-index: 100;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 0 10px 10px #ccc;
+    padding: 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #004853;
+}
+
+.form-edit-user{
+    width: 100%;
+    height: 90%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: .5rem;
+    background-color: #004853;
+
+}
+
+.form-edit-user input{
+    width: 45%;
+    height: 30%;
+    padding: 15px;
+    text-align: center;
+    outline: none;
+    border: none;
+    border-radius: 8px;
+}
+
+.form-edit-user div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: .5rem;
+    width: 100%;
+    height: 20%;
+}
+
+.form-edit-user input[type="submit"]{
+    padding: 10px;
+    width: 30%;
+    height: 40px;
+    background-color: var(--corPrincipal);
+    color: white;
+    cursor: pointer;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+
+
+.closeButton-edit-user{
+    border: 1px solid #ccc;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: -5px;
+    left: 482px;
+    background-color: var(--corPrincipal);
+    color: #fff;
+    cursor: pointer;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.msgEdit{
+    color: rgb(19, 235, 19);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: .9rem;
+}
 
 /* -------------------- Main------------------ */
 
@@ -85,6 +216,7 @@ main{
     gap: 100px;
     justify-content: center;
     flex-wrap: wrap;
+    background-color: rgb(226, 223, 220);
 
 }
 
@@ -113,11 +245,13 @@ main{
 
 .despesas{
     color: red;
+    background-color: #fff;
 
 }
 
 .entrada{
     color: green;
+    background-color: #fff;
 
 
 }
@@ -139,7 +273,7 @@ main{
     display: flex;
     justify-content: center;
     padding: 20px;
-
+    background-color: rgb(226, 223, 220);
 }
 
 
@@ -160,6 +294,7 @@ table{
     height: 100%;
     font-family: var(--fontEspecial);
     font-size: .9em;
+    background-color: #fff;
 
 }
 
@@ -276,6 +411,7 @@ aside{
     }
 }
 
+/* --------  MODAL PROFIT  ---------- */
 
 .modalEntMont{
     position: absolute;
@@ -349,7 +485,7 @@ aside{
     
 }
 
-/* --------  DESPESA  ---------- */
+/* --------  MODAL EXPENDITURE  ---------- */
 
 
 .modalExp{
