--- a/css/style-login.css
+++ b/css/style-login.css
@@ -8,7 +8,10 @@
     --fontEspecial: 'Inter', sans-serif;
     --fontPadrao: system-ui;
     --vermelhoExpenses: firebrick;
-
+    --msgPositive: rgb(19, 235, 19);
+    --msgNegative: #FF6347;
+    --msgNegative2: firebrick;
+    --invisibleColor:rgba(0,0,0,0);
 }
 
 
@@ -26,6 +29,8 @@ body{
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 .login-img{
@@ -70,7 +75,7 @@ body{
 }
 
 .form-container-login form input[type="submit"]{
-    margin-top: 20px;
+    margin-top: 10px;
     text-align: center;
     cursor: pointer;
     height: 20%;
@@ -81,6 +86,18 @@ body{
     opacity: 0.6;
     transition: 0.7s;
 }
+
+.forgot-pass{
+    margin-top: -20px;
+}
+
+.forgot-pass a{
+    text-decoration: none;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: .75em;
+    color: white;
+}
+
 
 .mail-to-acess{
     text-decoration: none;
@@ -94,9 +111,150 @@ body{
 
 .msg{
     margin-top: 20px;
-    color: rgb(161, 69, 69);
+    color: var(--invisibleColor);
     font-size: .9rem;
     font-family: verdana;
     font-weight: bold;
+    
+}
+
+.modalRecovery{
+    width: 300px;
+    height: 250px;
+    background-color: #004853;
+    position: relative;
+    top: -300px;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+    border-radius: 5px;
+
+}
+
+.modalRecovery form{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding: 5px;
+    align-items: center;
+}
+
+.modalRecovery form input{
+    width: 80%;
+    height: 40px;
+    padding: 10px;
+    outline: none;
+    margin-top: 20px;
+    border: none;
+    
+}
+
+.modalRecovery form input[type="email"]{
+
+    border-radius: 8px;
+    
+}
+
+.modalRecovery form input[type="submit"]{
+    width: 40%;
+    border-radius: 10px;
+    background-color: var(--corPrincipal);
+    color: #fff;
+    font-family: var(--fontEspecial);
+    font-size: .9em;
+
+    
+}
+
+.modalRecovery form input[type="submit"]:hover{
+
+    cursor: pointer;
+    opacity: .7;
+    transition: .5s;
+}
+
+
+
+.modalRecovery form label{
+    color: rgba(0,0,0,0);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: .9em;
+}
+
+.closeModalRecovery{
+    position: absolute;
+    top: -5px;
+    right: -5px;
+    text-decoration: none;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    width: 20px;
+    height: 20px;
+    color: white;
+    background-color: var(--corPrincipal);
+    border: 1px solid #fff;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+
+@media screen and (max-width: 700px){
+
+.form-container-login{
+    width: 350px;
+    height: 300px;
+    margin-top: 10px;
+    background-color: rgba(0,75,83,0.5);
+    border-radius: 10px;
+    }
+
+    .form-container-login form{
+        margin: 30px auto;
+        width: 80%;
+        height: 65%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 2rem;
+    }
+    
+    .form-container-login form input{
+        width: 80%;
+        height: 20%;
+        padding: 10px;
+        font-size: .9rem;
+        border: none;
+        outline: none;
+        border-radius: 5px;
+    }
+    
+    .form-container-login form input[type="submit"]{
+        margin-top: 20px;
+        text-align: center;
+        cursor: pointer;
+        height: 20%;
+        
+    }
+    
+    .form-container-login form input[type="submit"]:hover{
+        opacity: 0.6;
+        transition: 0.7s;
+    }
+    
+    .mail-to-acess{
+        text-decoration: none;
+        margin: -10px 135px;
+        display: block;
+        width: 100%;
+        color: white;
+        font-size: .8rem;
+        font-family: verdana;
+    }
     
 }
