--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,10 @@
     --fontEspecial: 'Inter', sans-serif;
     --fontPadrao: system-ui;
     --vermelhoExpenses: firebrick;
-
+    --msgPositive: rgb(19, 235, 19);
+    --msgNegative: #FF6347;
+    --msgNegative2: firebrick;
+    --invisibleColor:rgba(0,0,0,0);
 }
 
 
@@ -28,7 +31,7 @@ body{
     gap: 5px;
     padding: 5px;
     grid-template-columns: auto 200px;
-    grid-template-rows: 60px 85vh 15vh;
+    grid-template-rows: 60px 85% 15%;
     overflow-y: hidden;
     background-color: #000;
 }
@@ -123,7 +126,7 @@ nav{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    box-shadow: 0 0 10px 10px #ccc;
+    box-shadow: 0 0 5px 5px #ccc;
     padding: 10px;
     flex-direction: column;
     justify-content: center;
@@ -193,7 +196,7 @@ nav{
 }
 
 .msgEdit{
-    color: rgb(19, 235, 19);
+    color: var(--invisibleColor);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: .9rem;
 }
@@ -281,7 +284,6 @@ main{
     width: 90%;
     height: 80%;
     overflow-y: scroll;
-
 }
 
 
@@ -291,7 +293,6 @@ table{
     width: 100%;
     text-align: center;
     border: 1px solid #ccc;
-    height: 100%;
     font-family: var(--fontEspecial);
     font-size: .9em;
     background-color: #fff;
@@ -428,6 +429,8 @@ aside{
 }
 
 .closebutton{
+    width: 30px;
+    height: 30px;
     text-decoration: none;
     border: 2px solid #ccc;
     border-radius: 70%;
@@ -436,6 +439,13 @@ aside{
     background-color: var(--corVerdeAgua);
     color: white;
     margin: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: -10px;
+    left: 430px;
 }
 
 .form-EntMont{
@@ -503,14 +513,22 @@ aside{
 }
 
 .closebuttonExp{
+    width: 30px;
+    height: 30px;
     text-decoration: none;
     border: 2px solid #ccc;
-    border-radius: 70%;
+    border-radius: 50%;
     padding: 2px;
-    float: right;
     background-color: var(--vermelhoExpenses);
     color: white;
     margin: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: -10px;
+    left: 430px;
 }
 
 .form-Exp{
@@ -569,3 +587,455 @@ footer{
     grid-area: D;
 }
 
+.credits{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.credits span{
+    color: white;
+    font-family: var(--fontEspecial);
+    font-size: .8em;
+}
+
+.mobile-menu{
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: .3rem;
+    width: 40px;
+    padding: 6px;
+}
+
+.line{
+    width: 100%;
+    height: 2px;
+    background-color: white;
+}
+
+@keyframes modalMobile{
+    from{
+        transform: translateX(100%)
+    }
+    to{
+        transform: translateX(0)
+    }
+}
+
+
+
+
+.modalMobile{
+    position: absolute;
+    top: 65px;
+    right: 0;
+    width: 200px;
+    height: calc(100% - 60px);
+    background-color: var(--corAside);
+    display: none;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 20rem;
+    padding: 5px;
+
+
+}
+
+.activeMobileModal{
+    animation: modalMobile 0.5s;
+    display: flex;
+}
+
+
+
+.insert-list{
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    width: 100%;
+    height: 100px;
+}
+
+.insert-list a:first-child{
+    margin-top: 10px;
+}
+
+
+.options-list{
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    width: 100%;
+    height: 100px;
+}
+
+
+.modalMobile a{
+    text-decoration: none;
+    height: 40px;
+    width: 100%;
+    text-align: center;
+    color: #fff;
+    padding: 5px;
+    background-color: rgba(0,0,0,0.2);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: .8rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+
+}
+
+/* ----------------------------------------- RESPONSIVE ----------------------------------------------*/
+
+@media screen and (max-width: 700px){
+
+    body{
+        height: 100vh;
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+        padding: 5px;
+        background-color: #000;
+        overflow-x: hidden;
+    }
+
+    header{
+        width: 100%;
+        height: 60px;
+        background-color: var(--corPrincipal);
+    }
+    
+    nav{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        padding: 10px;
+        position: relative;
+    }
+
+    main{
+        width: 100%;
+        height: 85%;
+        background-color: var(--BrancoPadrao);
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+    }
+
+    .cards{
+        width: 100%;
+        height: 180px;
+        border: 1px solid #ccc;
+        display: flex;
+        justify-content: center;
+        background-color: rgb(226, 223, 220);
+        padding: 1px;
+
+    }
+
+    .card{
+        width: 125px;
+        height: 60px;
+        border: 1px solid #ccc;
+        display: flex;
+        flex-direction: column;
+        font-family: var(--fontPadrao);
+        box-shadow: 0 0 5px 5px #ccc;
+    }
+
+    .card.entrada{
+        margin-top: -90px;
+    }
+
+
+    .info{
+        width: 100%;
+        height: 100%;
+        border: 1px solid #ccc;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 5px;
+        background-color: rgb(226, 223, 220);
+    }
+    
+    
+    .table-container{
+        width: 100%;
+        height: 80%;
+        overflow-y: scroll;
+        overflow-x: scroll;
+    
+    }
+
+
+    aside{
+        background-color: var(--corAside);
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        padding: 10px;
+    }
+
+    footer{
+        width: 100%;
+        height: calc(15% - 60px);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: var(--corPrincipal);
+
+    }
+
+    .modalEditUser{
+        display: none;
+        position: absolute;
+        width: 350px;
+        height: 350px;
+        background-color: rgb(245, 237, 237);
+        z-index: 100;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 10px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #004853;
+        margin: 0 auto;
+        box-shadow: 0 0 1px 1px #ccc;
+    }
+    
+    .form-edit-user{
+        width: 100%;
+        height: 90%;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: .5rem;
+        background-color: #004853;
+    
+    }
+    
+    .form-edit-user input{
+        width: 45%;
+        height: 30%;
+        padding: 15px;
+        text-align: center;
+        outline: none;
+        border: none;
+        border-radius: 8px;
+    }
+    
+    .form-edit-user div{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: .5rem;
+        width: 100%;
+        height: 20%;
+    }
+
+    .closeButton-edit-user{
+        border: 1px solid #ccc;
+        border-radius: 50%;
+        width: 20px;
+        height: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        top: -5px;
+        left: 332px;
+        background-color: var(--corPrincipal);
+        color: #fff;
+        cursor: pointer;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+
+
+
+    .credits{
+        width: 100%;
+        height: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .credits span{
+        color: white;
+        font-family: var(--fontEspecial);
+        font-size: .6em;
+    }
+
+    .mobile-menu{
+        display: flex;
+    }
+
+    .drop{
+        display: none;
+    }
+
+    .modalEntMont{
+        position: absolute;
+        width: 350px;
+        height: 300px;
+        background-color: var(--BrancoPadrao);
+        border: none;
+        box-shadow: 0 0 5px 5px #ccc ;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: none;
+        animation: modals 0.5s ease-in-out;
+
+
+    }
+
+
+    .form-EntMont{
+        margin-top: 30px;
+        width: 350px;
+        height: 250;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1rem;
+        align-items: center;
+        justify-content: center;
+        padding: 5px;
+    
+    
+    }
+    
+    .form-EntMont input, select{
+        padding: 5px;
+        font-family: var(--fontEspecial);
+        outline: none;
+    }
+    
+    .form-EntMont input[type="submit"]{
+        width: 80px;
+        background-color: #57C0A8;
+        color: white;
+        border: none;
+        outline: none;
+        border-radius: 8px;
+        cursor: pointer;
+    
+    }
+    
+    .form-EntMont textarea{
+        resize: none;
+        padding: 5px;
+        outline: none;
+    }
+
+    .closebutton{
+        width: 30px;
+        height: 30px;
+        text-decoration: none;
+        border: 2px solid #ccc;
+        border-radius: 70%;
+        padding: 2px;
+        float: right;
+        background-color: var(--corVerdeAgua);
+        color: white;
+        margin: 0;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        top: -10px;
+        left: 325px;
+    }
+
+    .modalExp{
+        position: absolute;
+        width: 350px;
+        height: 300px;
+        background-color: var(--BrancoPadrao);
+        border: none;
+        box-shadow: 0 0 5px 5px #ccc ;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: none;
+        animation: modals 0.5s ease-in-out;
+    }
+    
+    .closebuttonExp{
+        width: 30px;
+        height: 30px;
+        text-decoration: none;
+        border: 2px solid #ccc;
+        border-radius: 50%;
+        padding: 2px;
+        float: right;
+        background-color: var(--vermelhoExpenses);
+        color: white;
+        margin: 0;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        top: -10px;
+        left: 325px;
+    }
+    
+    .form-Exp{
+        margin-top: 20px;
+        width: 350px;
+        height: 250;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1rem;
+        align-items: center;
+        justify-content: center;
+        padding: 5px;
+    
+    
+    }
+    
+    .form-Exp input, select{
+        padding: 6px;
+        font-family: var(--fontEspecial);
+        outline: none;
+    }
+    
+    .form-Exp input[type="submit"]{
+        width: 80px;
+        background-color: var(--vermelhoExpenses);
+        color: white;
+        border: none;
+        outline: none;
+        border-radius: 8px;
+        cursor: pointer;
+    
+    }
+    
+    .form-Exp textarea{
+        resize: none;
+        padding: 5px;
+        outline: none;
+    }
+
+}
