--- a/css/style.css
+++ b/css/style.css
@@ -351,14 +351,14 @@ aside{
 }
 
 .list-item.menu{
-    font-size: 1.2em;
+    font-size: 1.05em;
     font-weight: bold;
     cursor: pointer;
     margin-left: 50px;
 }
 
 .list-item.submenu{
-    font-size: 1em;
+    font-size: .9em;
     cursor: pointer;
 }
 
@@ -764,7 +764,7 @@ footer{
 
     .info{
         width: 100%;
-        height: 100%;
+        height: calc(100% - 180px);
         border: 1px solid #ccc;
         display: flex;
         justify-content: center;
