--- a/css/style.css
+++ b/css/style.css
@@ -617,85 +617,12 @@ footer{
     background-color: white;
 }
 
-@keyframes modalMobile{
-    from{
-        transform: translateX(100%)
-    }
-    to{
-        transform: translateX(0)
-    }
-}
 
 
 
 
-.modalMobile{
-    position: absolute;
-    top: 65px;
-    right: 0;
-    width: 200px;
-    height: calc(100% - 60px);
-    background-color: var(--corAside);
-    display: none;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 20rem;
-    padding: 5px;
 
 
-}
-
-.activeMobileModal{
-    animation: modalMobile 0.5s;
-    display: flex;
-}
-
-
-
-.insert-list{
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2rem;
-    width: 100%;
-    height: 100px;
-}
-
-.insert-list a:first-child{
-    margin-top: 10px;
-}
-
-
-.options-list{
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 2rem;
-    width: 100%;
-    height: 100px;
-}
-
-
-.modalMobile a{
-    text-decoration: none;
-    height: 40px;
-    width: 100%;
-    text-align: center;
-    color: #fff;
-    padding: 5px;
-    background-color: rgba(0,0,0,0.2);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: .8rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-
-}
 
 /* ----------------------------------------- RESPONSIVE ----------------------------------------------*/
 
@@ -1036,6 +963,74 @@ footer{
         resize: none;
         padding: 5px;
         outline: none;
+    }
+
+    .modalMobile{
+        position: fixed;
+        top: 65px;
+        right: -200px;
+        width: 200px;
+        height: calc(100% - 60px);
+        background-color: var(--corAside);
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        gap: 20rem;
+        padding: 5px;
+        transition: .8s;
+    
+    
+    }
+    
+    .activeMobileModal{
+        right: 0;
+    }
+    
+    
+    
+    .insert-list{
+    
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 2rem;
+        width: 100%;
+        height: 100px;
+    }
+    
+    .insert-list a:first-child{
+        margin-top: 10px;
+    }
+    
+    
+    .options-list{
+    
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 2rem;
+        width: 100%;
+        height: 100px;
+    }
+    
+    
+    .modalMobile a{
+        text-decoration: none;
+        height: 40px;
+        width: 100%;
+        text-align: center;
+        color: #fff;
+        padding: 5px;
+        background-color: rgba(0,0,0,0.2);
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: .8rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 1rem;
+    
     }
 
 }
