--- a/css/style-login.css
+++ b/css/style-login.css
@@ -51,6 +51,9 @@ body{
     margin-top: 10px;
     background-color: rgba(0,75,83,0.5);
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .form-container-login form{
@@ -108,6 +111,7 @@ body{
     color: white;
     font-size: .8rem;
     font-family: verdana;
+    text-align: center;
 }
 
 .msg{
@@ -212,6 +216,10 @@ body{
     margin-top: 10px;
     background-color: rgba(0,75,83,0.5);
     border-radius: 10px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
     }
 
     .form-container-login form{
@@ -250,12 +258,13 @@ body{
     
     .mail-to-acess{
         text-decoration: none;
-        margin: -10px 135px;
+        margin: 15px 125px;
         display: block;
         width: 100%;
         color: white;
         font-size: .8rem;
         font-family: verdana;
+        text-align: center;
     }
     
 }
