correção nos campos valor

--- a/css/style.css
+++ b/css/style.css
@@ -496,6 +496,9 @@ aside{
     text-align: center;
     position: fixed;
     left: 170px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     
 }
 
